# AliQuarkonium

./: add_shared_lib.sh  build_pythia_dict.sh  notes.md  run.sh  run_analysis.sh  run_generator.sh
AliEventAnalysis/: Makefile  TTree_data_handler.cpp  resolutionPhoton.cpp  smearE.cpp
AliEventAnalysis/src/: main.cpp  resolutionElectron.cpp  sigmaX.cpp  smearP.cpp  smearX.cpp  test.cpp
AliEventGenerator/: Makefile
AliEventGenerator/src/: Init.cpp  main.cpp
AliEventLib/: CMakeLists.txt  LinkDef.h
AliEventLib/include/: AliEvent.h  AliParticle.h
AliEventLib/src/: AliEvent.cpp  AliParticle.cpp
